# service-connect

./: Dockerfile  LICENSE  README.md  README_aws_service_discovery.md  buildspec.yml  default.env  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: aws_ecs_deploy.yaml
flask_app_1/: Dockerfile  app.py  config.py
flask_app_2/: Dockerfile  README.md  app.py  config.py
flask_app_3/: Dockerfile  README.md  __init__.py  app.py  config.py
